<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.birger.mainmenuactivity.MainMenuActivity"
    android:weightSum="1">


    <Button
        android:text="@string/btn_showNz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNames"
        android:onClick="toNameList"
        android:layout_weight="0.25" />

    <Button
        android:text="@string/btn_showPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnPics"
        android:onClick="toGallery"
        android:layout_weight="0.25" />

    <Button
        android:text="@string/btn_startQz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnQuiz"
        android:onClick="toQuiz"
        android:layout_weight="0.25" />

    <Button
        android:text="@string/btn_addPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddPerson"
        android:onClick="toAddPerson"
        android:layout_weight="0.25" />
</LinearLayout>
